@@ -686,7 +686,7 @@ static void WizardDraw(Block *block)
 
   text_color = menuColor;
 
-  if(G->HaveGUI && G->ValidContext) {
+  if(G->HaveGUI && G->ValidContext && ((block->rect.right-block->rect.left)>6)) {
 
     glColor3fv(I->Block->BackColor);
     BlockFill(I->Block);
